--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :image %>
-    <%= form.text_area :image %>
+  <%= form.label :image %>
+  <%= form.file_field :image %>
   </div>
 
   <div class="actions">
