--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -1,19 +1,12 @@
-<%= form_with(model: feed, local: true) do |form| %>
-  <% if feed.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(feed.errors.count, "error") %> prohibited this feed from being saved:</h2>
-
-      <ul>
-      <% feed.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_with(model: feed, local: true, url:confirm_feeds_path) do |form| %>
 
   <div class="field">
-  <%= form.label :image %>
-  <%= form.file_field :image %>
+    <%= form.label :image %>
+    <!-- 確認画面から新規作成画面に戻った時に、 -->
+    <!-- アップロードした画像を表示させるための記述 -->
+    <%= image_tag(@feed.image.url) if @feed.image && @feed.image.url %>
+    <%= form.file_field :image %>
+    <%= form.hidden_field :image_cache %>
   </div>
 
   <div class="actions">
