--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: feed, local: true, url:confirm_feeds_path) do |form| %>
+<%= form_with(model: feed, local: true, url:choose_new_or_edit) do |form| %>
 
   <div class="field">
     <%= form.label :image %>
