カラムのcontent追加

--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -7,6 +7,12 @@
     <%= form.hidden_field :image_cache %>
   </div>
 
+  <div class="comment_title">
+    <%= form.label :comment %>
+    <%= form.text_field :comment %>
+  </div>
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
