feed/controller,view多数記述

--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -8,8 +8,8 @@
   </div>
 
   <div class="comment_title">
-    <%= form.label :comment %>
-    <%= form.text_field :comment %>
+    <%= form.label :content %>
+    <%= form.text_field :content %>
   </div>
 
 
