--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Feeds</h1>
+<h1>RaiceBook</h1>
 
 <table>
   <thead>
@@ -14,6 +14,7 @@
     <% @feeds.each do |feed| %>
       <tr>
         <td><%= feed.image %></td>
+        <td><%= feed.content %></td>
         <td><%= link_to 'Show', feed %></td>
         <td><%= link_to 'Edit', edit_feed_path(feed) %></td>
         <td><%= link_to 'Destroy', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
