--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <header class="header">
     <% flash.each do |key, value| %>
       <%= content_tag(:div, value, class: "#{key}") %>
     <% end %>
@@ -21,7 +22,11 @@
       <%= link_to "Sign up", new_user_path %>
       <%= link_to "Login", new_session_path %>
     <% end %>
-
+    </header>
     <%= yield %>
+    <footer class="footer">
+      <p>運営会社RaiceBooK株式会社</p>
+      <p>© 1994-2019 Copyright YAMAMOTO Corp.</p>
+    </footer>
   </body>
 </html>
