--- a/app/views/feeds/confirm.html.erb
+++ b/app/views/feeds/confirm.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h1>確認画面</h1>
 <%= form_with(model: @feed, url: feeds_path, local: true) do |form| %>
   <%= image_tag(@feed.image.url) if @feed.image && @feed.image.url %>
@@ -12,3 +14,5 @@
   <p>コメント:<%= @feed.content %></p>
   <%= form.submit "戻る", name: "back" %>
 <% end %>
+
+</div>
