--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,23 +1,23 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<h1>RaiceBook</h1>
+<p id="notice"><%= notice %></p>
 
 <table>
   <thead>
     <tr>
       <th>Image</th>
-      <th colspan="3"></th>
+      <th>Comment</th>
     </tr>
   </thead>
 
-  <tbody>
+  <tbody class="row">
     <% @feeds.each do |feed| %>
       <tr>
-        <td><%= feed.image %></td>
-        <td><%= feed.content %></td>
-        <td><%= link_to 'Show', feed %></td>
-        <td><%= link_to 'Edit', edit_feed_path(feed) %></td>
-        <td><%= link_to 'Destroy', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="col-md-6"><%= feed.image %></td>
+        <td class="col-md-6"><%= feed.content %></td>
+        <td class="col-md-6"><%= link_to 'Show', feed %></td>
+        <td class="col-md-6"><%= link_to 'Edit', edit_feed_path(feed) %></td>
+        <td class="col-md-6"><%= link_to 'Destroy', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,3 +26,5 @@
 <br>
 
 <%= link_to 'New Feed', new_feed_path %>
+
+</div>
