--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Image:</strong>
   <%= image_tag @feed.image.url %>
-  <%= @feed.content %>
 </p>
+<h4>COMMENT</h4>
+<p><%= @feed.content %></p>
 
 <%= link_to 'Edit', edit_feed_path(@feed) %> |
 <%= link_to 'Back', feeds_path %>
