--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <%= image_tag @feed.image.url %>
+  <%= image_tag @feed.image.url, :size =>'100x100'  %>
 </p>
 <h4>COMMENT</h4>
 <p><%= @feed.content %></p>
