--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,7 @@
               <%= link_to "プロフィール", user_path(current_user.id), class:"nav-link" %>
             </li>
             <li class="nav-item">
-              <%= link_to "新規イベント作成", new_feed_path, class:"nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "新規イベント作成", new_feed_path, class:"nav-link" %>
+              <%= link_to "投稿", new_feed_path, class:"nav-link" %>
             </li>
             <li class="nav-item" >
               <%= link_to "ログアウト", session_path(current_user.id), method: :delete, data: { confirm: 'ログアウトしますか？' }, class:"nav-link"  %>
