--- a/app/views/feeds/edit.html.erb
+++ b/app/views/feeds/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Feed</h1>
-
-<%= render 'form', feed: @feed %>
-
-<%= link_to 'Show', @feed %> |
-<%= link_to 'Back', feeds_path %>
+<div class="text-center">
+  <div class="container">
+    <h2>投稿を編集</h2>
+    <%= render 'form' %>
+    <%= link_to 'Back', feeds_path %>
+  </div>
+</div>
