--- a/app/views/feeds/new.html.erb
+++ b/app/views/feeds/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Feed</h1>
-
-<%= render 'form', feed: @feed %>
-
-<%= link_to 'Back', feeds_path %>
+<div class="text-center">
+  <div class="container">
+    <h2>投稿する</h2>
+    <%= render 'form' %>
+    <%= link_to 'Back', feeds_path %>
+  </div>
+</div>
