--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,10 +1,26 @@
-<p id="notice"><%= notice %></p>
+<div class="text-center">
+  <div class="feed_show container">
 
-<p>
-  <%= image_tag @feed.image.url, :size =>'100x100'  %>
-</p>
-<h4>COMMENT</h4>
-<p><%= @feed.content %></p>
+    <h3><%= @feed.user.name %>さんの投稿</h3>
+    <p class="col-12">
+      <%= image_tag @feed.image.url ,class: "img-fluid" %>
+    </p>
 
-<%= link_to 'Edit', edit_feed_path(@feed) %> |
-<%= link_to 'Back', feeds_path %>
+    <p>
+      <strong>投稿日時：</strong>
+      <%= @feed.created_at.try(:strftime,"%Y年%m月%d日") %>
+    </p>
+
+    <p>
+      <%= @feed.content %>
+    </p>
+
+    <% if current_user.present? %>
+      <% if @feed.user_id == current_user.id %>
+        <p><%= link_to '編集', edit_feed_path(@feed),class: "btn btn-outline-danger" %></p>
+        <p><%= link_to '削除',feed_path(@feed.id), method: :delete ,class: "btn btn-outline-danger",data: { confirm: '投稿を削除しますか？' } %></p>
+      <% end %>
+    <% end %>
+    <p><%= link_to '戻る', feeds_path ,class: "btn btn-outline-secondary" %></p>
+  </div>
+</div>
