--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,18 @@
-<h1><%= @user.name %>のページ</h1>
-
-<p>メールアドレス: <%= @user.email %></p>
+<div class="text-center">
+  <div class="search_index container">
+    <br>
+    <% if @user.id == current_user.id %>
+      <h1>ようこそ<%= @user.name %>さん</h1>
+      <hr>
+      <p>あなたのページです。</p>
+    <% else %>
+      <h1><%= @user.name %>さんのページ</h1>
+      <hr>
+    <% end %>
+    <br>
+    <p>メールアドレス: <%= @user.email %></p>
+    <br>
+    <%= link_to '戻る', :back,class: "btn btn-outline-secondary" %>
+  </div>
+  <br>
+</div>
