--- a/app/assets/stylesheets/feeds.scss
+++ b/app/assets/stylesheets/feeds.scss
@@ -24,7 +24,11 @@ a {
   }
 }
 
+a.feed_link {
+  text-decoration: none;
+}
 .feed_link {
+  text-decoration: none;
   &:hover {
     opacity: 0.7;
     background-color: #fff;
@@ -99,6 +103,7 @@ label {
   background-color: white;
   padding-top: 10px;
   padding-bottom: 10px;
+  margin-top: 30px;
 }
 
 .search_reslut {
