--- a/app/views/feeds/edit.html.erb
+++ b/app/views/feeds/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center">
-  <div class="container">
+  <div class="container feed_show">
     <h2>投稿を編集</h2>
     <%= render 'form' %>
-    <%= link_to 'Back', feeds_path %>
+    <%= link_to '戻る', feeds_path ,class: "btn btn-outline-secondary" %>
   </div>
 </div>
